# finex-public

./: .env.example  .gitignore  LICENSE  PUBLICAR_EN_GITHUB.md  README.md  alembic.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml
backend/: README.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260527_0001_initial.py  20260529_0002_manual_entries.py  20260601_0003_gmail_integration.py  20260602_0004_visibility_people_receivables.py  20260602_0005_transaction_relationship_category.py  20260602_0006_payables_obligation_offsets.py  20260603_0007_accounts_investments.py  20260604_0008_rules_feedback.py  20260604_0009_relationship_default_mi.py  20260606_0010_multi_currency_credit_cards.py  20260610_0011_full_email_bodies.py  20260613_0012_internal_transfers.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_accounts_investments.py  test_categories.py  test_dashboard.py  test_gmail.py  test_health.py  test_imports.py  test_people_receivables.py  test_rules.py  test_transactions.py
data/demo/: sample_emails.json
docs/: architecture.md  deployment.md  gmail-setup.md  privacy.md  security-checklist.md
docs/qa/: f7-visual.md
frontend/: README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
scripts/: capture_feature.mjs  capture_screenshots.mjs  dev-placeholder.mjs  init_db.py  phase0_check.py
tests/: test_phase0_structure.py
(+76 files in other folders)
