[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "finex"
version = "0.0.0"
description = "Local-first personal finance dashboard based on the FinEx project plan."
requires-python = ">=3.11,<3.13"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "google-api-python-client>=2.150",
  "google-auth>=2.36",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["."]

[tool.setuptools]
py-modules = []
